Updated many to many mapping to use Set instead of List